# GameCoreLogicLab

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: evaluator.md  generator.md  planner.md
.claude/commands/: build-module.md  ci.md  evaluate.md  maintenance.md  plan-module.md  replay.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_module.md
.github/workflows/: ci.yml
docs/: architecture.md  module-template.md  quality-standards.md
docs/plans/completed/: harness-engineering.md
harness/: ci.py  fixtures.py
harness/benchmarks/: conftest.py
harness/lint/: check_architecture.py  check_determinism.py  check_docs.py  check_style.py
harness/sim/: replay.py  runner.py  scenario.py
harness/viewer/: template.html
notebooks/: replay_analysis.ipynb
src/common/: interfaces.py  models.py
tests/: test_common.py
